--- a/WebTests/ClientApp/src/app/management/management.component.html
+++ b/WebTests/ClientApp/src/app/management/management.component.html
@@ -1,6 +1,13 @@
-<h2>Управление тестами</h2>
+<div class="mx-auto max-w-3xl p-6">
+  <h2 class="text-3xl font-bold mb-6">Управление тестами</h2>
 
-<div class="d-grid gap-1 col-3">
-  <button class="btn btn-success mt-1" routerLink="/management/create">Создать</button>
-  <button class="btn btn-outline-success mt-1" routerLink="/management/edit">Редактировать</button>
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+
+    <button class="w-full py-3 bg-green-600 hover:bg-green-700 text-white font-semibold rounded-xl shadow duration-300"
+            routerLink="/management/create">Создать</button>
+
+    <button class="w-full py-3 border border-green-600 text-green-700 hover:bg-green-700 hover:text-white font-semibold rounded-xl duration-300 shadow"
+            routerLink="/management/edit">Редактировать</button>
+
+  </div>
 </div>
