--- a/WebTests/ClientApp/src/app/management/management-edit/management-edit-list/management-edit-list.component.html
+++ b/WebTests/ClientApp/src/app/management/management-edit/management-edit-list/management-edit-list.component.html
@@ -1,13 +1,23 @@
-<h2>Редактирование</h2>
+<div class="max-w-5xl mx-auto px-6 py-4">
 
-<p>Выберите тест для редактирования</p>
+  <h2 class="text-2xl font-bold mb-4">Редактирование</h2>
 
-<div *ngIf="tests;else no_tests">
-  <ul>
-    <li *ngFor="let test of tests"><h4><a [routerLink]="['/management/edit', test.id]">{{ test.title }}</a></h4></li>
-  </ul>
+  <p class="text-gray-600 mb-6">Выберите тест для редактирования</p>
+
+  <div *ngIf="tests;else no_tests">
+    <ul class="space-y-3">
+      <li *ngFor="let test of tests">
+        <a [routerLink]="['/management/edit', test.id]"
+           class="block px-5 py-4 border border-gray-300 rounded-xl shadow-sm
+                 hover:border-green-600 hover:bg-green-50
+                 transition-colors duration-300
+                 text-lg font-medium">{{ test.title }}</a>
+      </li>
+    </ul>
+  </div>
+
+  <ng-template #no_tests>
+    <h3 class="text-xl text-gray-500">Нет тестов</h3>
+  </ng-template>
+
 </div>
-
-<ng-template #no_tests>
-  <h3>Нет тестов</h3>
-</ng-template>
