--- a/WebTests/ClientApp/src/app/tests/my-tests/my-tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/my-tests/my-tests.component.html
@@ -1,9 +1,23 @@
-<h2>Ваши тесты</h2>
+<div class="max-w-5xl mx-auto px-6 py-4">
 
-<ul>
-  <li *ngFor="let test of tests">
-    <a [routerLink]="['/management/edit', test.id]">
-      {{ test.title }} <span *ngIf="!test.published">(черновик)</span>
-    </a>
-  </li>
-</ul>
+  <h2 class="text-2xl font-bold mb-8">Ваши тесты</h2>
+
+  <div *ngIf="tests;else no_tests">
+    <ul class="space-y-3">
+      <li *ngFor="let test of tests">
+        <a [routerLink]="['/management/edit', test.id]"
+           class="block px-5 py-4 border border-gray-300 rounded-xl shadow-sm
+                 hover:border-green-600 hover:bg-green-50
+                 transition-colors duration-300
+                 text-lg font-medium">
+          {{ test.title }} <span *ngIf="!test.published">(черновик)</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <ng-template #no_tests>
+    <h3 class="text-xl text-gray-500">Нет тестов</h3>
+  </ng-template>
+
+</div>
