--- a/WebTests/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebTests/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,50 +1,78 @@
-<header>
-  <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
-  >
-    <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Web-тесты</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target=".navbar-collapse"
-        aria-label="Toggle navigation"
-        [attr.aria-expanded]="isExpanded"
-        (click)="toggle()"
-      >
-        <span class="navbar-toggler-icon"></span>
+<header class="shadow mb-4">
+  <nav class="bg-white border-b">
+    <div class="container mx-auto px-10 flex items-center justify-between h-16">
+
+      <!-- Лого -->
+      <a class="text-xl font-semibold" [routerLink]="['/']">Web-тесты</a>
+
+      <!-- Кнопка бургер -->
+      <button (click)="toggle()"
+              class="md:hidden p-2 rounded focus:outline-none focus:ring"
+              aria-label="Toggle navigation">
+        <svg *ngIf="!isExpanded" xmlns="http://www.w3.org/2000/svg"
+             class="h-6 w-6" fill="none"
+             viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+
+        <svg *ngIf="isExpanded" xmlns="http://www.w3.org/2000/svg"
+             class="h-6 w-6" fill="none"
+             viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+        </svg>
       </button>
-      <div
-        class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
-        [ngClass]="{ show: isExpanded }"
-      >
-        <ul class="navbar-nav flex-grow">
-          <li class="nav-item"
-              [routerLinkActive]="['link-active']"
+
+      <!-- Меню -->
+      <div class="w-full md:flex md:items-center md:w-auto"
+           [ngClass]="{
+          'block': isExpanded,
+          'hidden': !isExpanded
+        }">
+        <ul class="md:flex md:space-x-6 mt-4 md:mt-0">
+
+          <!-- Управление -->
+          <li class="py-2 md:py-0"
+              [routerLinkActive]="['text-blue-600', 'font-semibold']"
               [routerLinkActiveOptions]="{ exact: true }">
             <div *ngIf="authService.isAuthenticated">
-              <a class="nav-link text-dark" [routerLink]="['management']">Управление</a>
+              <a class="hover:text-blue-600 transition" [routerLink]="['/management']">
+                Управление
+              </a>
             </div>
           </li>
-          <li class="nav-item"
-              [routerLinkActive]="['link-active']"
+
+          <!-- Тесты -->
+          <li class="py-2 md:py-0"
+              [routerLinkActive]="['text-blue-600', 'font-semibold']"
               [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/tests']">Тесты</a>
+            <a class="hover:text-blue-600 transition" [routerLink]="['/tests']">
+              Тесты
+            </a>
           </li>
-          <li class="nav-item"
-              [routerLinkActive]="['link-active']"
+
+          <!-- Профиль / Войти -->
+          <li class="py-2 md:py-0"
+              [routerLinkActive]="['text-blue-600', 'font-semibold']"
               [routerLinkActiveOptions]="{ exact: true }">
             <div *ngIf="authService.isAuthenticated; else loginLink">
-              <a class="nav-link text-dark" [routerLink]="['/profile', currentUserUsername]">{{ currentUserUsername }}</a>
+              <a class="hover:text-blue-600 transition"
+                 [routerLink]="['/profile', currentUserUsername]">
+                {{ currentUserUsername }}
+              </a>
             </div>
 
             <ng-template #loginLink>
-              <a class="nav-link text-dark" [routerLink]="['login']">Войти</a>
+              <a class="hover:text-blue-600 transition" [routerLink]="['/login']">
+                Войти
+              </a>
             </ng-template>
           </li>
+
         </ul>
       </div>
+
     </div>
   </nav>
 </header>
