--- a/WebTests/ClientApp/src/app/tests/tests-list/tests-list.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests-list/tests-list.component.html
@@ -7,7 +7,7 @@
   <div *ngIf="tests;else no_tests">
     <ul class="space-y-3">
       <li *ngFor="let test of tests">
-        <a [routerLink]="['/tests', test.title]"
+        <a [routerLink]="['/tests', test.id]"
            class="block px-5 py-4 border border-gray-300 rounded-xl shadow-sm
                  hover:border-green-600 hover:bg-green-50
                  transition-colors duration-300
