--- a/WebTests/ClientApp/src/app/profile/profile.component.html
+++ b/WebTests/ClientApp/src/app/profile/profile.component.html
@@ -31,11 +31,20 @@
 
     </div>
 
-    <h2>История</h2>
+    <h2>История прохождения тестов</h2>
     <div *ngIf="history">
       <ul>
         <li *ngFor="let try of history">
-          <p>{{ try.passedAt | date:'dd.MM.yyyy HH:mm:ss' }} - {{ try.test.title }} - {{ try.score }} - {{ try.isPassed }}</p>
+          <p>{{ try.test.title }} - {{ try.passedAt | date:'dd.MM.yyyy HH:mm:ss' }} - {{ try.score }} - {{ try.isPassed }}</p>
+        </li>
+      </ul>
+    </div>
+
+    <h2>Созданные тесты</h2>
+    <div *ngIf="created_tests">
+      <ul>
+        <li *ngFor="let test of created_tests">
+          <p>{{ test.title }} - {{ test.createdDate | date:'dd.MM.yyyy HH:mm:ss' }} - {{ test.published }}</p>
         </li>
       </ul>
     </div>
