--- a/WebTests/ClientApp/src/app/auth/login/login.component.html
+++ b/WebTests/ClientApp/src/app/auth/login/login.component.html
@@ -17,11 +17,11 @@
                required
                email
                #email="ngModel"
-               class="w-full border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 transition"/>
+               class="w-full border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition" />
 
-        <div *ngIf="email.invalid && email.touched"
+        <div *ngIf="email.invalid && email.touched && email.value"
              class="text-red-600 text-sm mt-1">
-          Email обязателен и должен быть корректным.
+          Email должен быть корректным.
         </div>
       </div>
 
@@ -33,12 +33,20 @@
                name="password"
                required
                #password="ngModel"
-               class="w-full border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition"/>
+               class="w-full border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition" />
       </div>
 
       <button type="submit"
               [disabled]="loginForm.invalid"
-              class="w-full py-3 rounded-xl bg-indigo-600 text-white font-semibold hover:bg-indigo-700 disabled:bg-gray-300 disabled:cursor-not-allowed transition-colors duration-300">Войти</button>
+              class="w-full py-3 rounded-xl bg-indigo-600 text-white font-semibold hover:bg-indigo-700 disabled:bg-gray-300 disabled:cursor-not-allowed transition-colors duration-300">
+        Войти
+      </button>
+
+      <div *ngIf="error"
+           class="mt-3 rounded-lg border border-red-200 bg-red-100 px-4 py-2 text-sm font-semibold text-red-800 text-center">
+        Неправильная почта или пароль
+      </div>
+
     </form>
 
 
