--- a/WebTests/ClientApp/src/app/tests/tests/tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests/tests.component.html
@@ -38,10 +38,12 @@
     </button>
   </div>
 
-  <div *ngIf="isLast" class="mt-8"> 
-    <button (click)="finishTest()" 
+  <div *ngIf="isLast" class="mt-8">
+    <button (click)="finishTest()"
+            [disabled]="isLocked === false"
             class="px-6 py-3 bg-gray-900 text-white rounded-xl shadow hover:bg-gray-700
-                   transition-colors duration-300">
+                 transition-colors duration-300
+                 disables:opacity-40 disabled:cursor-not-allowed">
       Завершить тест
     </button>
   </div>
