--- a/WebTests/ClientApp/src/app/tests/tests/tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests/tests.component.html
@@ -56,7 +56,7 @@
   </div>-->
 
   <div *ngIf="!isSubmited" class="mt-8">
-    <button (click)="submitAnswer()"
+    <button (click)="submitAnswer(currentQuestion.id, test.title)"
             [disabled]="isSelected === false"
             class="px-6 py-3 border border-blue-600 text-blue-700 rounded-xl shadow
                    hover:bg-blue-600 hover:text-white transition-colors duration-300
